unpackaged/main/default/objects/FSL_WorkOrder_Configuration__mdt/FSL_WorkOrder_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Contains configurable settings pertaining to WorkOrder processing</description>
    <label>FSL WorkOrder Configuration</label>
    <pluralLabel>FSL WorkOrder Configurations</pluralLabel>
</CustomObject>