unpackaged/main/default/objects/FSL_WorkOrder_Configuration__mdt/fields/Default_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_Wait_Time__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Default Wait Time</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>