unpackaged/main/default/objects/FSL_WorkOrder_Configuration__mdt/fields/Editable_Window_After_Clear_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Editable_Window_After_Clear_Minutes__c</fullName>
    <defaultValue>1440</defaultValue>
    <description>Time window in Minutes during which the WorkOrder remains editable after being Cleared. During this time, diapatchers and drivers can edit this WO. When this window elapses, the call details are dispatched to ACE</description>
    <label>Editable Window After Clear (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>