unpackaged/main/default/objects/FSL_WorkOrder_Configuration__mdt/fields/Maximum_Wait_Time_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Wait_Time_Allowed__c</fullName>
    <description>This is the Maximum Wait Time allowed on Work Order Intake.</description>
    <label>Maximum Wait Time Allowed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>