unpackaged/main/default/objects/FSL_WorkOrder_Configuration__mdt/validationRules/Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Range</fullName>
    <active>true</active>
    <description>Defines the range of values</description>
    <errorConditionFormula>Editable_Window_After_Clear_Minutes__c  &lt; 0   ||  Editable_Window_After_Clear_Minutes__c  &gt; 1440</errorConditionFormula>
    <errorMessage>Value must be greater than or equal to zero and less than or equal to 1440 ( 1 whole day)</errorMessage>
</ValidationRule>